# project-infnet-algoritmos-de-inteligencia-artificial-para-clusterizacao-25E4_2

./: README.md  project.ipynb  pyproject.toml  requirements.txt
