[project]
name = "project-infnet-algoritmos-de-inteligencia-artificial-para-clusterizacao-25e4-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy<2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scikit-learn-extra>=0.3.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
]
